# cvtpf

./: .gitignore  LICENSE  README.md  dependencias_a_instalar.txt  main.py  pyproject.toml  requirements.txt  test_camera.py
lixo/: gestures.py
src/: detect_gesture.py  main.py  spells.py
src/pipeline/: detect_gesture.py  gestures.py  hands.py  yolo.py
src/utils/: gif_loader.py  overlay.py
